[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = { version = "1.7.0" }
lazy_static = { version = "1.4.0" }
nom = { version = "7.1.1" }
priority-queue = { version = "1.3.0" }
